# Library_API

./: .env.sample  .gitignore  Dockerfile  README.MD  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
fixtures/: author.json  book.json
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: create_super_user.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_address_user_birth_date_and_more.py
