[tool.poetry]
name = "final-project"
version = "0.1.0"
description = "graduation project"
authors = ["artemtimofeev <artemtimofeev@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
redis = "^5.2.1"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.8"
django-cors-headers = "^4.6.0"
djangorestframework-simplejwt = "^5.3.1"
django-filter = "^24.3"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
pillow = "^11.1.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
